frontend/src/legacy/packages/shared/src/components/worldMap/components/popup/popup.scss
@import "shared/src/webKit/constants.scss";

.c-worldMap
{
    .gm-style-iw,
    .gm-style-iw-t::after
    {
        // Apply fade-in animation.
        opacity: 0;
        animation: fade-in-popup .15s;
        animation-fill-mode: forwards;
    }

    .gm-style-iw
    {
        // Adjust position above the arrow.
        top: 5px;
    }

    .gm-style-iw-t
    {
        &::after
        {
            // Adjust arrow size and position.
            width: 10px;
            height: 10px;
            top: 5px;
            clip-path: polygon(100% 100%, 0 0, 0 100%);
        }
    }

    .gm-style-iw-c,
    .gm-style-iw-d
    {
        // Use flex layout to size the content.
        display: flex;
        justify-content: stretch;
        align-items: stretch;

        // Remove size constraints, as the size is controlled by the flex layout.
        max-width: none !important;
        max-height: none !important;

        // Remove scroll bars, as we want the content div to scroll instead.
        overflow: hidden !important;
    }

    .gm-style-iw-c
    {
        // Remove unwanted padding.
        padding: 0;

        > button
        {
            // Adjust the position of the close button.
            top: 0 !important;
            right: -5px !important;
        }
    }

    .gm-style-iw-d
    {
        // Apply padding outside the scroll container.
        padding: 2px;

        > div
        {
            display: flex;
            justify-content: stretch;
        }
    }
}

.c-worldMap-popup
{
    // Apply size constraints.
    max-width: 300px !important;
    max-height: 300px !important;

    // Apply padding inside the scroll container.
    padding: 10px 12px;

    // Use overlay scroll bars.
    overflow: overlay;

    // Ensure the correct font weight is used.
    line-height: var(--font-small-line-height);
    font-size: var(--font-small-font-size);
    font-weight: var(--font-small-font-weight);

    .c-worldMap-popup-header
    {
        display: flex;
        justify-content: space-between;
        margin-bottom: 11px;
        font-size: 12px;
        font-weight: bold;
        line-height: 18px;
        color: var(--textDarkSecondary);
        text-transform: uppercase;

        &:not(:first-child)
        {
            margin-top: 3px;
        }

        :first-child
        {
            margin-right: 40px;
        }
    }

    .c-worldMap-popup-title
    {
        font-size: 16px;
        font-weight: 600;
    }

    .c-worldMap-popup-subtitle
    {
        font-size: 14px;
        font-weight: 600;
    }

    .c-worldMap-popup-section
    {

        &:not(:first-child)
        {
            margin-top: 10px;

            &.c-worldMap-popup-section--border
            {
                padding-top: 10px;
                border-top: 1px solid #d8e1ee;
            }
        }
    }

    .c-worldMap-popup-section-title
    {
        margin-bottom: 11px;
        font-size: 12px;
        font-weight: bold;
        line-height: 18px;
        color: var(--textDarkSecondary);
        text-transform: uppercase;
    }

    .c-worldMap-popup-section-row
    {
        display: flex;
        justify-content: space-between;
        font-size: 12px;
        font-weight: normal;

        &:not(:first-child)
        {
            margin-top: 3px;
        }

        :first-child
        {
            margin-right: 40px;
        }
    }
}

@keyframes fade-in-popup
{
    0%
    {
        opacity: 0;
    }
    60%
    {
        opacity: 0;
    }
    to
    {
        opacity: 1;
    }
}

